# rules_halide

./: .bazelignore  .gitignore  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  extensions.bzl  halide.bzl  prebuilt_pkg.bzl
.github/workflows/: ci.yml  release.yml
internal/: BUILD.bazel  BUILD.prebuilt_pkg  README.md  prebuilt_pkg.bzl  toolchain.bzl  versions.bzl
tests/: BUILD.bazel  simple_test.cc
tests/integration/: BUILD.bazel  cross_compilation_test.sh
tests/integration/test_workspace/: .bazelrc  BUILD.bazel  MODULE.bazel  simple_generator.cc  simple_test.cc
tools/: BUILD.bazel
