load("//internal:toolchain.bzl", "halide_toolchain")

package(default_visibility = ["//visibility:public"])

halide_toolchain(
    name = "halide_prebuilt_toolchain_impl",
    gengen = "@halide_prebuilt_pkg//:gengen",
    halide = "@halide_prebuilt_pkg//:halide",
    runtime = "@halide_prebuilt_pkg//:runtime",
)

toolchain(
    name = "halide_prebuilt_toolchain",
    toolchain = ":halide_prebuilt_toolchain_impl",
    toolchain_type = "//:toolchain_type",
)

config_setting(
    name = "linux_x86_64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
)

config_setting(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:aarch64",
    ],
)

config_setting(
    name = "macos_arm64",
    constraint_values = [
        "@platforms//os:macos",
        "@platforms//cpu:aarch64",
    ],
)

filegroup(
    name = "internal_files",
    srcs = glob(["**/*"]),
    visibility = ["//visibility:public"],
)
