load("@rules_halide//:halide.bzl", "halide_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

# Define integration platforms
platform(
    name = "x86_64_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
)

platform(
    name = "aarch64_platform",
    constraint_values = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
)

halide_library(
    name = "simple_scale",
    src = "simple_generator.cc",
    args = "scale=2.0",
    function = "simple_scale",
)

cc_test(
    name = "simple_test",
    srcs = ["simple_test.cc"],
    deps = [
        ":simple_scale",
    ],
)

filegroup(
    name = "workspace_files",
    srcs = [
        ".bazelrc",
        "BUILD.bazel",
        "MODULE.bazel",
        "chromium_sysroot.BUILD",
        "simple_generator.cc",
        "simple_test.cc",
    ],
    visibility = ["//visibility:public"],
)
