module(name = "halide_integration_test")

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_halide")
local_path_override(
    module_name = "rules_halide",
    path = "../../..",
)

bazel_dep(name = "toolchains_llvm", version = "1.8.0")

# Setup sysroots directly via use_repo_rule
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "chromium_sysroot_linux_aarch64",
    build_file = "//:chromium_sysroot.BUILD",
    sha256 = "2e3a344f48da76b6532f3de86759f94359292143ccaf6094814e09441a36629f",
    urls = [
        "https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/0e28d9832614729bb5b731161ff96cb4d516f345/debian_bullseye_arm64_sysroot.tar.xz",
    ],
)

# Configure LLVM toolchains
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "17.0.6",
    stdlib = {
        "": "stdc++",
    },
)
llvm.toolchain(
    name = "j5_cross_toolchain",
    llvm_version = "17.0.6",
)
llvm.sysroot(
    name = "j5_cross_toolchain",
    label = "@chromium_sysroot_linux_aarch64//:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "j5_cross_toolchain", "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    "@j5_cross_toolchain//:all",
)
